--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dark-sky-api": "^0.6.21",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
-    "react-skycons": "^0.7.0",
+    "sheetrock": "^1.1.4",
     "sort-by": "^1.2.0"
   },
   "scripts": {
