--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sheetrock": "^1.1.4",
+    "sort-by-typescript": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "17.0.16",
