--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.0.0-beta.8",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sheetrock": "^1.1.4",
     "sort-by-typescript": "^1.2.1"
   },
   "devDependencies": {
