--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.0.0-beta.8",
-    "next": "11.0.1",
+    "firebase": "^9.6.1",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sort-by-typescript": "^1.2.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.16",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "@types/react": "^17.0.37",
+    "eslint": "^8.4.1",
+    "eslint-config-next": "^12.0.7",
+    "typescript": "^4.5.3"
   }
 }
