--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.6.1",
-    "next": "^12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sort-by-typescript": "^1.2.1"
+    "firebase": "9.15.0",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sort-by-typescript": "1.2.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.37",
-    "eslint": "^8.4.1",
-    "eslint-config-next": "^12.0.7",
-    "typescript": "^4.5.3"
+    "@types/react": "18.0.26",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "typescript": "4.9.4"
   }
 }
