--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:inspect": "NODE_OPTIONS='--inspect' next dev",
+    "dev:inspect": "NODE_OPTIONS='--inspect-brk' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "9.16.0",
+    "firebase": "9.23.0",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sort-by-typescript": "1.2.3"
   },
   "devDependencies": {
-    "@types/react": "18.0.27",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
-    "typescript": "4.9.4"
+    "@types/react": "18.2.14",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "typescript": "5.1.3"
   }
 }
