--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "9.23.0",
+    "@vercel/kv": "0.2.2",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sort-by-typescript": "1.2.3"
   },
   "devDependencies": {
+    "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
