--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "next build",
     "dev": "next dev",
     "dev:inspect": "NODE_OPTIONS='--inspect-brk' next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "format": "prettier --ignore-path .gitignore --write .",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "@vercel/kv": "0.2.2",
@@ -21,6 +22,7 @@
     "@types/react": "18.2.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "prettier": "2.8.8",
     "typescript": "5.1.3"
   }
 }
